// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Project Archived 1`] = `
<div
  className="listItem PROJECT_ARCHIVED"
>
  <div>
    <label
      className="checkbox"
    >
      <input
        defaultChecked={true}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
  </div>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Project"
    />
  </div>
  <div
    className="projectImage"
  >
    <a
      href="https://www.lego.com"
    >
      <img
        alt="project thumbnail"
        src="https://img.buzzfeed.com/buzzfeed-static/static/2017-03/23/17/tmp/buzzfeed-prod-fastlane-01/tmp-name-2-1059-1490303712-5_dblbig.jpg"
      />
    </a>
  </div>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Project Default 1`] = `
<div
  className="listItem PROJECT_INBOX"
>
  <div>
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
  </div>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Project"
    />
  </div>
  <div
    className="projectImage"
  >
    <a
      href="https://www.lego.com"
    >
      <img
        alt="project thumbnail"
        src="https://img.buzzfeed.com/buzzfeed-static/static/2017-03/23/17/tmp/buzzfeed-prod-fastlane-01/tmp-name-2-1059-1490303712-5_dblbig.jpg"
      />
    </a>
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Project Pinned 1`] = `
<div
  className="listItem PROJECT_PINNED"
>
  <div>
    <label
      className="checkbox"
    >
      <input
        defaultChecked={false}
        disabled={true}
        name="checked"
        type="checkbox"
      />
      <span
        className="checkbox-custom"
        onClick={[Function]}
      />
    </label>
  </div>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Project"
    />
  </div>
  <div
    className="projectImage"
  >
    <a
      href="https://www.lego.com"
    >
      <img
        alt="project thumbnail"
        src="https://img.buzzfeed.com/buzzfeed-static/static/2017-03/23/17/tmp/buzzfeed-prod-fastlane-01/tmp-name-2-1059-1490303712-5_dblbig.jpg"
      />
    </a>
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots ProjectList Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="listItem PROJECT_INBOX"
    >
      <div>
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
      </div>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Project 1"
        />
      </div>
      <div
        className="projectImage"
      >
        <a
          href="https://www.lego.com"
        >
          <img
            alt="project thumbnail"
            src="https://img.buzzfeed.com/buzzfeed-static/static/2017-03/23/17/tmp/buzzfeed-prod-fastlane-01/tmp-name-2-1059-1490303712-5_dblbig.jpg"
          />
        </a>
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="listItem PROJECT_INBOX"
    >
      <div>
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
      </div>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Project 2"
        />
      </div>
      <div
        className="projectImage"
      >
        <a
          href="https://www.lego.com"
        >
          <img
            alt="project thumbnail"
            src="https://img.buzzfeed.com/buzzfeed-static/static/2017-03/23/17/tmp/buzzfeed-prod-fastlane-01/tmp-name-2-1059-1490303712-5_dblbig.jpg"
          />
        </a>
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="listItem PROJECT_INBOX"
    >
      <div>
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
      </div>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Project 3"
        />
      </div>
      <div
        className="projectImage"
      >
        <a
          href="https://www.lego.com"
        >
          <img
            alt="project thumbnail"
            src="https://img.buzzfeed.com/buzzfeed-static/static/2017-03/23/17/tmp/buzzfeed-prod-fastlane-01/tmp-name-2-1059-1490303712-5_dblbig.jpg"
          />
        </a>
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="listItem PROJECT_INBOX"
    >
      <div>
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
      </div>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Project 4"
        />
      </div>
      <div
        className="projectImage"
      >
        <a
          href="https://www.lego.com"
        >
          <img
            alt="project thumbnail"
            src="https://img.buzzfeed.com/buzzfeed-static/static/2017-03/23/17/tmp/buzzfeed-prod-fastlane-01/tmp-name-2-1059-1490303712-5_dblbig.jpg"
          />
        </a>
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="listItem PROJECT_INBOX"
    >
      <div>
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
      </div>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Project 5"
        />
      </div>
      <div
        className="projectImage"
      >
        <a
          href="https://www.lego.com"
        >
          <img
            alt="project thumbnail"
            src="https://img.buzzfeed.com/buzzfeed-static/static/2017-03/23/17/tmp/buzzfeed-prod-fastlane-01/tmp-name-2-1059-1490303712-5_dblbig.jpg"
          />
        </a>
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="listItem PROJECT_INBOX"
    >
      <div>
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
      </div>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Project 6"
        />
      </div>
      <div
        className="projectImage"
      >
        <a
          href="https://www.lego.com"
        >
          <img
            alt="project thumbnail"
            src="https://img.buzzfeed.com/buzzfeed-static/static/2017-03/23/17/tmp/buzzfeed-prod-fastlane-01/tmp-name-2-1059-1490303712-5_dblbig.jpg"
          />
        </a>
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ProjectList Empty 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="wrapper-message"
    >
      <span
        className="icon-check"
      />
      <div
        className="title-message"
      >
        You have no projects
      </div>
      <div
        className="subtitle-message"
      >
        Sit back and relax
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ProjectList Loading 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots ProjectList With Pinned Projects 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="listItem PROJECT_PINNED"
    >
      <div>
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
      </div>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Project 6 (pinned)"
        />
      </div>
      <div
        className="projectImage"
      >
        <a>
          <img
            alt="project thumbnail"
          />
        </a>
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="listItem PROJECT_INBOX"
    >
      <div>
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
      </div>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Project 1"
        />
      </div>
      <div
        className="projectImage"
      >
        <a
          href="https://www.lego.com"
        >
          <img
            alt="project thumbnail"
            src="https://img.buzzfeed.com/buzzfeed-static/static/2017-03/23/17/tmp/buzzfeed-prod-fastlane-01/tmp-name-2-1059-1490303712-5_dblbig.jpg"
          />
        </a>
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="listItem PROJECT_INBOX"
    >
      <div>
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
      </div>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Project 2"
        />
      </div>
      <div
        className="projectImage"
      >
        <a
          href="https://www.lego.com"
        >
          <img
            alt="project thumbnail"
            src="https://img.buzzfeed.com/buzzfeed-static/static/2017-03/23/17/tmp/buzzfeed-prod-fastlane-01/tmp-name-2-1059-1490303712-5_dblbig.jpg"
          />
        </a>
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="listItem PROJECT_INBOX"
    >
      <div>
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
      </div>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Project 3"
        />
      </div>
      <div
        className="projectImage"
      >
        <a
          href="https://www.lego.com"
        >
          <img
            alt="project thumbnail"
            src="https://img.buzzfeed.com/buzzfeed-static/static/2017-03/23/17/tmp/buzzfeed-prod-fastlane-01/tmp-name-2-1059-1490303712-5_dblbig.jpg"
          />
        </a>
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="listItem PROJECT_INBOX"
    >
      <div>
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
      </div>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Project 4"
        />
      </div>
      <div
        className="projectImage"
      >
        <a
          href="https://www.lego.com"
        >
          <img
            alt="project thumbnail"
            src="https://img.buzzfeed.com/buzzfeed-static/static/2017-03/23/17/tmp/buzzfeed-prod-fastlane-01/tmp-name-2-1059-1490303712-5_dblbig.jpg"
          />
        </a>
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="listItem PROJECT_INBOX"
    >
      <div>
        <label
          className="checkbox"
        >
          <input
            defaultChecked={false}
            disabled={true}
            name="checked"
            type="checkbox"
          />
          <span
            className="checkbox-custom"
            onClick={[Function]}
          />
        </label>
      </div>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Project 5"
        />
      </div>
      <div
        className="projectImage"
      >
        <a
          href="https://www.lego.com"
        >
          <img
            alt="project thumbnail"
            src="https://img.buzzfeed.com/buzzfeed-static/static/2017-03/23/17/tmp/buzzfeed-prod-fastlane-01/tmp-name-2-1059-1490303712-5_dblbig.jpg"
          />
        </a>
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
